--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hero header</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
     <header class="header">
         <div class="container">
@@ -15,11 +17,62 @@
         </div>
     </header>
     <main>
-        <section class="header-banner">
-            <!-- Zuxra -->
-        </section>
+        <div class="container">
+            <section class="header-banner">
+                <!-- Zuxra -->
+            </section>
 
+            <section class="about">
+                <div class="about-content">
+                    <div class="about-info">
+                        <span class="about-info_subtitle">About Our Agency</span>
+                        <h4 class="about-info_title">We create awesome prototypes, plugins, and templates.</h4>
+                        <p class="about-info_text">For instance, whenever I go back to the guest house during the
+                            morning to copy out the contract, these gentlemen are always still sitting there eating
+                            their breakfasts.
+                        </p>
+                        <a href="#!" class="about-info_play_link">
+                            <img src="./img/play video_icon.svg" alt="">
+                            PLAY VIDEO
+                        </a>
+                    </div>
 
+                    <div class="about-img">
+                        <img src="./img/about img.png" alt="">
+                    </div>
+                </div>
+
+            </section>
+
+            <section class="web">
+                <div class="web-content">
+                    <div class="web-service blog">
+                        <li class="blog-icon" id="one"><img src="./img/web desing icon.svg" alt=""></li>
+                        <div class="blog-info">
+                            <h4 class="blog-info_title">web design</h4>
+                            <p class="blog-info_text">Research, user experience testing, mockups, and prototypes</p>
+                        </div>
+                    </div>
+
+                    <div class="web-service blog">
+                        <li class="blog-icon" id="two"><img src="./img/web desing icon.svg" alt=""></li>
+                        <div class="blog-info">
+                            <h4 class="blog-info_title">web design</h4>
+                            <p class="blog-info_text">Research, user experience testing, mockups, and prototypes</p>
+                        </div>
+                    </div>
+
+                    <div class="web-service blog">
+                        <li class="blog-icon" id="three"><img src="./img/web desing icon.svg" alt=""></li>
+                        <div class="blog-info">
+                            <h4 class="blog-info_title">web design</h4>
+                            <p class="blog-info_text">Research, user experience testing, mockups, and prototypes</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
+
 </html>
