--- a/index.html
+++ b/index.html
@@ -71,6 +71,30 @@
                     </div>
                 </div>
             </section>
+
+            <section class="gallery">
+                <div class="container">
+                    <div class="gallery-content">
+                        <span class="gallery-subtitle">Portfolio</span>
+                        <h4 class="gallery-title">Browse Our Projects</h4>
+                        <nav class="gallery-nav">
+                            <li class="gallery-nav_b"><a href="" class="gallery-nav_link">All</a></li>
+                            <li class="gallery-nav_b"><a href="" class="gallery-nav_link">Web Design</a></li>
+                            <li class="gallery-nav_b"><a href="" class="gallery-nav_link">Development</a></li>
+                            <li class="gallery-nav_b"><a href="" class="gallery-nav_link">Research</a></li>
+                        </nav>
+
+                        <div class="gallery-grid">
+                            <div class="gallery-image"><img src="./img/portfolio .png" alt=""></div>
+                            <div class="gallery-image"><img src="./img/portfolio_(2).png" alt=""></div>
+                            <div class="gallery-image"><img src="./img/portfolio_(3).png" alt=""></div>
+                            <div class="gallery-image"><img src="./img/portfolio_(4).png" alt=""></div>
+                            <div class="gallery-image"><img src="./img/porfolio_(5).png" alt=""></div>
+                            <div class="gallery-image"><img src="./img/portfolio_(6).png" alt=""></div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </div>
     </main>
 </body>
