--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 </div>
             </section>
 
-            <section class="gallery">
+            <section class="gallery">   
                 <div class="container">
                     <div class="gallery-content">
                         <span class="gallery-subtitle">Portfolio</span>
@@ -85,12 +85,12 @@
                         </nav>
 
                         <div class="gallery-grid">
-                            <div class="gallery-image"><img src="./img/portfolio .png" alt=""></div>
-                            <div class="gallery-image"><img src="./img/portfolio_(2).png" alt=""></div>
-                            <div class="gallery-image"><img src="./img/portfolio_(3).png" alt=""></div>
-                            <div class="gallery-image"><img src="./img/portfolio_(4).png" alt=""></div>
-                            <div class="gallery-image"><img src="./img/porfolio_(5).png" alt=""></div>
-                            <div class="gallery-image"><img src="./img/portfolio_(6).png" alt=""></div>
+                            <div class="gallery-image image1"><img src="./img/portfolio .png" alt=""></div>
+                            <div class="gallery-image image2"><img src="./img/portfolio_(2).png" alt=""></div>
+                            <div class="gallery-image image3"><img src="./img/portfolio_(3).png" alt=""></div>
+                            <div class="gallery-image image4"><img src="./img/portfolio_(4).png" alt=""></div>
+                            <div class="gallery-image image5"><img src="./img/porfolio_(5).png" alt=""></div>
+                            <div class="gallery-image image6"><img src="./img/portfolio_(6).png" alt=""></div>
                         </div>
                     </div>
                 </div>
